src/objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Clear_Product_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Adjustment_Percent__c</fullName>
        <description>Percent adjustment ( + or - ) based on price point.</description>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Commission Adjustment Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Content_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Content Pack</label>
        <referenceTo>Content_Pack__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <formula>Training_Event__r.Training_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fill_product_values__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>temporarily used to fill data to fields on new topics created on training events</description>
        <label>Product Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Content_Pack__c</fullName>
        <formula>ISNULL(Content_Pack__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Content Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Item_Commission_Percent__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Line Item Commission Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <picklist>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecoaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite PLUS Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STAR12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Hours__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Number of Hours</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_workbooks__c</fullName>
        <label>Number of workbooks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldSalesforceID__c</fullName>
        <externalId>true</externalId>
        <label>OldSalesforceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_LineItem_ID__c</fullName>
        <description>In this field we keep track of OpportunityLineItem related to the Topic. Unfortunately it&apos;s not possible to create a lookup.</description>
        <label>Opportunity_LineItem_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <inlineHelpText>Copied from the Opportunity product</inlineHelpText>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Delivery_Date__c</fullName>
        <label>Shipping Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Signer__c</fullName>
        <label>Shipping Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Tracking_No__c</fullName>
        <label>Shipping Tracking No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Name__c</fullName>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <displayFormat>#{000000}</displayFormat>
        <label>Topic #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Event_Number__c</fullName>
        <formula>Training_Event__r.Training_Event_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Event Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <label>xTraining Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Country__c</fullName>
        <label>xWorkbook Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_ID__c</fullName>
        <label>Workbook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workbook_Location__c</fullName>
        <label>Workbook Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Workbook_UPC__c</fullName>
        <label>xWorkbook UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>null_value__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>null value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_selected_for_prefill__c</fullName>
        <formula>Fill_product_values__c!=null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product selected for prefill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xAssigned_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assigned by Operations</inlineHelpText>
        <label>xAssigned Trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xEnd_Time__c</fullName>
        <label>xEnd Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>xTrainer_Notified__c</fullName>
        <label>xTrainer Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xTraining_End_Date_Time__c</fullName>
        <label>xTraining End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>xTraining_End_Date__c</fullName>
        <label>xTraining End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xTraining_Start_Date_Time__c</fullName>
        <label>xTraining Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <label>Topic</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Topic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>